# modern-cli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.cache/clangd/index/: config.hpp.E1B9F8CF8CB28357.idx  moderncli.hpp.270EAF7EB5FD7639.idx  moderncli_version.cpp.BCE7F09AFBD68672.idx  test_basic.cpp.10DDD735FC759E87.idx
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-clangd.sh
.github/workflows/: ci.yml  commit-message-lint.yml
cmake/: clang_tidy.cmake  coverage.cmake  git_version.cmake  mcliConfig.cmake.in  moderncliConfig.cmake.in
docs/: cli-design-principles.md  commits.md
include/mcli/: core.hpp  mcli.hpp  version.hpp  version.hpp.in  version_gen.hpp.in
include/mcli/detail/: command.hpp  config.hpp
include/mcli/detail/builder/: command_builder.hpp  flag_builder.hpp
include/mcli/detail/parse/: command_parser.hpp  parse_result.hpp
include/mcli/detail/spec/: flag_spec.hpp  option_spec.hpp
include/mcli/detail/utils/: config.hpp
include/moderncli/: moderncli.hpp
include/moderncli/detail/: config.hpp
src/: moderncli_version.cpp  version.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_flags.cpp  test_version.cpp
tests/utils/: args_builder.hpp
tools/hooks/: commit-msg
